// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apply editorconfig for stdin-filepath with a deep path (stderr) 1`] = `""`;

exports[`apply editorconfig for stdin-filepath with a deep path (stderr) 2`] = `""`;

exports[`apply editorconfig for stdin-filepath with a deep path (stdout) 1`] = `
"function f() {
	console.log(\\"should be indented with a tab\\")
}
"
`;

exports[`apply editorconfig for stdin-filepath with a deep path (stdout) 2`] = `
"function f() {
	console.log(\\"should be indented with a tab\\")
}
"
`;

exports[`apply editorconfig for stdin-filepath with a deep path (write) 1`] = `Array []`;

exports[`apply editorconfig for stdin-filepath with a deep path (write) 2`] = `Array []`;

exports[`apply editorconfig for stdin-filepath with nonexistent directory (stderr) 1`] = `""`;

exports[`apply editorconfig for stdin-filepath with nonexistent directory (stdout) 1`] = `
"function f() {
	console.log(\\"should be indented with a tab\\")
}
"
`;

exports[`apply editorconfig for stdin-filepath with nonexistent directory (write) 1`] = `Array []`;

exports[`apply editorconfig for stdin-filepath with nonexistent file (stderr) 1`] = `""`;

exports[`apply editorconfig for stdin-filepath with nonexistent file (stdout) 1`] = `
"function f() {
	console.log(\\"should be indented with a tab\\")
}
"
`;

exports[`apply editorconfig for stdin-filepath with nonexistent file (write) 1`] = `Array []`;

exports[`don’t apply editorconfig outside project for stdin-filepath with nonexistent directory (stderr) 1`] = `""`;

exports[`don’t apply editorconfig outside project for stdin-filepath with nonexistent directory (stdout) 1`] = `
"function f() {
  console.log(\\"should be indented with 2 spaces\\")
}
"
`;

exports[`don’t apply editorconfig outside project for stdin-filepath with nonexistent directory (write) 1`] = `Array []`;

exports[`format correctly if stdin content compatible with stdin-filepath (stderr) 1`] = `""`;

exports[`format correctly if stdin content compatible with stdin-filepath (stdout) 1`] = `
".name {
  display: none;
}
"
`;

exports[`format correctly if stdin content compatible with stdin-filepath (write) 1`] = `Array []`;

exports[`gracefully handle stdin-filepath with nonexistent directory (stderr) 1`] = `""`;

exports[`gracefully handle stdin-filepath with nonexistent directory (stdout) 1`] = `
".name {
  display: none;
}
"
`;

exports[`gracefully handle stdin-filepath with nonexistent directory (write) 1`] = `Array []`;

exports[`output file as-is if stdin-filepath matched patterns in ignore-path (stderr) 1`] = `""`;

exports[`output file as-is if stdin-filepath matched patterns in ignore-path (write) 1`] = `Array []`;

exports[`throw error if stdin content incompatible with stdin-filepath (stderr) 1`] = `
"[error] abc.js: SyntaxError: Unexpected token (1:1)
[error] > 1 | .name { display: none; }
[error]     | ^
"
`;

exports[`throw error if stdin content incompatible with stdin-filepath (stdout) 1`] = `""`;

exports[`throw error if stdin content incompatible with stdin-filepath (write) 1`] = `Array []`;
